--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAz6D8Oc4_pVCZJbGMzr5p2RE1d1sIIAQg"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAz6D8Oc4_pVCZJbGMzr5p2RE1d1sIIAQg"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- To be Added  -->
 </head>
